Added all sections

--- a/index.html
+++ b/index.html
@@ -25,23 +25,17 @@
                 <li class="list-item">
                     <a href="#education">Education</a>
                 </li>
-                <li class="list-item">
-                    <a href="#skills">Skills</a>
-                </li>
-                <li class="list-item">
-                    <a href="#contacts">Contacts</a>
-                </li>
             </ul>
         </nav>
     </header>
     <section>
         <article id="intro" class="intro">
             <div class="content">
-                <h1>Doncho Minkov</h1>
                 <div class="img-container">
                     <img src="/imgs/profile.jpg" />
                 </div>
                 <div class="info">
+                    <h1>Doncho Minkov</h1>
                     <ul class="list">
                         <li class="list-item">
                             <span>Date of birth</span>:
@@ -284,8 +278,60 @@
                 </ul>
             </div>
         </article>
+        <article id="education" class="education">
+            <div class="content">
+                <h1>Education</h1>
+                <ul class="list text-center">
+                    <li class="list-item half">
+                        <div>
+                            <h2>Software engineering</h2>
+                            <br/> Sofia University "St. Kliment Ohridski"
+                        </div>
+                        <div>
+                            <h3>Notable subjects</h3>
+                            <ul class="list">
+                                <li class="list-item">
+                                    Algorithms & Data Structures
+                                </li>
+                                <li class="list-item">
+                                    OOP
+                                </li>
+                                <li class="list-item">
+                                    Multithreading
+                                </li>
+                                <li class="list-item">
+                                    Applied mathematics
+                                </li>
+                                <li class="list-item">
+                                    Graph Theory
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="list-item half">
+                        <div>
+                            <h2>Mathematics & Informatics</h2>
+                            <br/>PMG "Acad. Nikola Obreshkov"
+                        </div>
+                        <div>
+                            <h3>Notable subjects</h3>
+                            <ul class="list">
+                                <li class="list-item">
+                                    Mathematics
+                                </li>
+                                <li class="list-item">
+                                    Algorithms
+                                </li>
+                                <li class="list-item">
+                                    I was part of the algorithms's team
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </article>
     </section>
-
 </body>
 
 </html>
