--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
     <link rel="stylesheet" href="/css/main.css">
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-scrollTo/2.1.2/jquery.scrollTo.min.js"></script>
+
+    <script src="/js/scroll-to.js"></script>
+
     <title>Doncho Minkov - Training Manager @ Telerik Academy</title>
 </head>
 
@@ -15,16 +21,16 @@
         <nav>
             <ul class="list list-horizontal">
                 <li class="list-item">
-                    <a href="#intro">Intro</a>
+                    <a class="btn-scroll" href="#intro">Intro</a>
                 </li>
                 <li class="list-item">
-                    <a href="#work">Work</a>
+                    <a class="btn-scroll" href="#work">Work</a>
                 </li>
                 <li class="list-item">
-                    <a href="#tech">Tech</a>
+                    <a class="btn-scroll" href="#tech">Tech</a>
                 </li>
                 <li class="list-item">
-                    <a href="#education">Education</a>
+                    <a class="btn-scroll" href="#education">Education</a>
                 </li>
             </ul>
         </nav>
@@ -59,14 +65,18 @@
                     <div class="buttons">
                         <ul class="list list-horizontal">
                             <li class="list-item">
-                                <a href="#" class="icon fb"></a>
+                                <a href="https://www.facebook.com/DonchoMinkov" class="icon fb"></a>
                             </li>
                             <li class="list-item">
-                                <a href="#" class="icon github"></a>
+                                <a href="http://github.com/minkov/" class="icon github"></a>
                             </li>
                             <li class="list-item">
-                                <a href="#" class="icon leetcode"></a>
+                                <a href="https://leetcode.com/doncho/" class="icon leetcode"></a>
                             </li>
+                            <li class="list-item">
+                                <a href="https://www.linkedin.com/in/donchominkov/" class="icon linkedin"></a>
+                            </li>
+                            
                         </ul>
                     </div>
                 </div>
