--- a/index.html
+++ b/index.html
@@ -54,15 +54,15 @@
                         </li>
                         <li class="list-item">
                             <span>Training Manager</span>,
-                            <a href="#">Telerik Academy</a>
+                            <a href="https://telerikacademy.com">Telerik Academy</a>
                         </li>
                         <li class="list-item">
                             <span>Phone</span>:
-                            <a href="#">+359-877-137-528</a>
+                            <a href="tel:+359-877-137-528">+359-877-137-528</a>
                         </li>
                         <li class="list-item">
                             <span>Email</span>:
-                            <a href="#">DonchoMinkov@gmail.com</a>
+                            <a href="mailto:DonchoMinkov@gmail.com">DonchoMinkov@gmail.com</a>
                         </li>
                     </ul>
 
