Added a link to CV

--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
                             <li class="list-item">
                                 <a href="https://www.facebook.com/DonchoMinkov" class="icon fb"></a>
                             </li>
+                            <li class="list-item">
+                                <a href="http://minkov.it" class="icon www"></a>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -247,7 +250,7 @@
                                     ASP.NET Core
                                 </li>
                                 <li class="list-item">
-                                    ASP.NET MV
+                                    ASP.NET MVC
                                 </li>
                                 <li class="list-item">
                                     EntityFramework
@@ -255,7 +258,8 @@
                                 <li class="list-item">
                                     WPF
                                 </li>
-                                <li class="list-item">UWP
+                                <li class="list-item">
+                                    UWP
                                 </li>
                             </ul>
                         </div>
