--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                                     Managing the team relations and balancing between different divisions
                                 </li>
                                 <li class="list-item">
-                                    I am the person responsible and main driver for the JavaScript, Java and algorithms courses
+                                    Responsible for the development and improvement of JavaScript, Java and algorithms courses
                                 </li>
                                 <li class="list-item">
                                     Integration and maintenance of online judge system:
@@ -129,7 +129,7 @@
                     <li class="list-item">
                         <div class="info">
                             <h2 class="position">Principal Technical Trainer</h2>
-                            <h3 class="company">Progress (Jan 2015 - Dec 2016)</h3>
+                            <h3 class="company">Progress/Telerik (Jan 2015 - Dec 2016)</h3>
                             <h4 class="location">Sofia, Bulgaria</h4>
                         </div>
 
@@ -147,7 +147,7 @@
                     <li class="list-item">
                         <div class="info">
                             <h2 class="position">Technical Trainer</h2>
-                            <h3 class="company">Progress (Jul 2010 - Dec 2014)</h3>
+                            <h3 class="company">Progress/Telerik (Jul 2010 - Dec 2014)</h3>
                             <h4 class="location">Sofia, Bulgaria</h4>
                         </div>
 
