Added hacker rank profile

--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
                                 <a href="https://leetcode.com/doncho/" class="icon leetcode"></a>
                             </li>
                             <li class="list-item">
+                                <a href="https://www.hackerrank.com/DonchoMinkov" class="icon hackerrank"></a>
+                            </li>
+                            <li class="list-item">
                                 <a href="https://www.linkedin.com/in/donchominkov/" class="icon linkedin"></a>
                             </li>
 
