--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    
     <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+    
     <link rel="stylesheet" href="/css/main.css">
+
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-scrollTo/2.1.2/jquery.scrollTo.min.js"></script>
@@ -67,7 +70,7 @@
                     </ul>
 
                     <div class="buttons">
-                        <ul class="list list-horizontal">
+                        <ul class="list list-horizontal list-icons">
                             <li class="list-item">
                                 <a href="https://leetcode.com/doncho/" class="icon leetcode"></a>
                             </li>
@@ -202,6 +205,10 @@
                                 <li class="list-item">
                                     Node.js
                                 </li>
+
+                                <li class="list-item">
+                                    React & React Native
+                                </li>
                                 <li class="list-item">
                                     Angular
                                 </li>
@@ -212,13 +219,10 @@
                                     Express
                                 </li>
                                 <li class="list-item">
-                                    jQUery
+                                    jQuery
                                 </li>
                                 <li class="list-item">
                                     TypeScript
-                                </li>
-                                <li class="list-item">
-                                    CoffeeScript
                                 </li>
                             </ul>
                         </div>
