Add SoftUni background

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                             <span>22 Jun, 1989</span>
                         </li>
                         <li class="list-item">
-                            <span>Training Manager</span>,
-                            <a href="https://telerikacademy.com">Telerik Academy</a>
+                            <span>Team Leader, System Architect & Trainer</span>,
+                            <a href="https://softuni.org">SoftUni</a>
                         </li>
                         <li class="list-item">
                             <span>Phone</span>:
@@ -101,8 +101,40 @@
                 <ul class="list">
                     <li class="list-item">
                         <div class="info">
+                            <h2 class="position">Team Leader, System Architect and Trainer</h2>
+                            <h3 class="company">SoftUni (Aug 2018 - present)</h3>
+                            <h4 class="location">Sofia, Bulgaria</h4>
+                        </div>
+
+                        <div class="details">
+                            <ul class="list">
+                                <li class="list-item">
+                                    Managing the team relations and balancing between different divisions
+                                </li>
+                                <li class="list-item">
+                                    Introducing and applying processes for improving communication
+                                <li class="list-item">
+                                    Building an infrastructure to deliver high-performance applications to different corners on the globe
+                                </li>
+                                <li class="list-item">
+                                    Configuring, building and maintaining the continious integration infrastructure
+                                </li>
+                                <li class="list-item">
+                                    I am the "Go to person" for each part of the application - front-end, back-end, infrastructure, automation, CI, deployment, etc...
+                                </li>
+                                <li class="list-item">
+                                    Performing training sessions on different technologies on a daily basis
+                                </li>
+                                <li class="list-item">
+                                    Performing training sessions on different technologies on a daily basis
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="list-item">
+                        <div class="info">
                             <h2 class="position">Training Manager</h2>
-                            <h3 class="company">Telerik Academy (Jan 2017 - present)</h3>
+                            <h3 class="company">Telerik Academy (Jan 2017 - Aug 2018)</h3>
                             <h4 class="location">Sofia, Bulgaria</h4>
                         </div>
 
@@ -174,26 +206,48 @@
             <div class="content">
                 <h1>Technical Expertise</h1>
                 <ul class="list list-horizontal list-equal-5 text-center">
-                    <li class="list-item wide">
-                        <h2 class="title">Algorithms</h2>
+                        <li class="list-item wide">
+                                <h2 class="title">Algorithms</h2>
+                                <div class="expertise">
+                                    <ul class="list">
+                                        <li class="list-item">
+                                            I keep my skills and knowledge current by frequently solving various problems.
+                                        </li>
+                                        <li class="list-item">
+                                            At my previous work, I am the person reponsible for the "Data Structures & Algorithms" course.
+                                        </li>
+                                        <li class="list-item">
+                                            I was part of my city's team at the National Olympiad in Informatics(Algorithms) in Burgas, Bulgaria.
+                                        </li>
+                                        <li class="list-item">
+                                            I was successfully admitted in Sofia University "St. Kliment Ohridski" due to my exceptional performance on the National
+                                            Olympiad in Informatics.
+                                        </li>
+                                        <li class="list-item">
+                                            For the past year, I have single-handedly maintained Telerik Academy's online judge system
+                                            <a href="http://judge.telerikacademy.com">http://judge.telerikacademy.com</a>.
+                                        </li>
+                                    </ul>
+                                </div>
+                            </li>
+                    <li class="list-item">
+                        <h2 class="title">DevOps & Cloud</h2>
                         <div class="expertise">
                             <ul class="list">
                                 <li class="list-item">
-                                    I keep my skills and knowledge current by frequently solving various problems.
+                                    Docker containerization
                                 </li>
                                 <li class="list-item">
-                                    At my work, I am the person reponsible for the "Data Structures & Algorithms" course.
+                                    Jenkins setup
                                 </li>
                                 <li class="list-item">
-                                    I was part of my city's team at the National Olympiad in Informatics(Algorithms) in Burgas, Bulgaria.
+                                    Amazon Web Services
                                 </li>
                                 <li class="list-item">
-                                    I was successfully admitted in Sofia University "St. Kliment Ohridski" due to my exceptional performance on the National
-                                    Olympiad in Informatics.
+                                    Nginx
                                 </li>
                                 <li class="list-item">
-                                    For the past year, I have single-handedly maintained Telerik Academy's online judge system
-                                    <a href="http://judge.telerikacademy.com">http://judge.telerikacademy.com</a>.
+                                    Linux/Mac/Windows system administration
                                 </li>
                             </ul>
                         </div>
