--- a/index.html
+++ b/index.html
@@ -120,13 +120,10 @@
                                     Configuring, building and maintaining the continious integration infrastructure
                                 </li>
                                 <li class="list-item">
-                                    I am the "Go to person" for each part of the application - front-end, back-end, infrastructure, automation, CI, deployment, etc...
+                                    I am the "Go to person" for most parts of the application - back-end, infrastructure, automation, system administration, CI, deployment, etc...
                                 </li>
                                 <li class="list-item">
-                                    Performing training sessions on different technologies on a daily basis
-                                </li>
-                                <li class="list-item">
-                                    Performing training sessions on different technologies on a daily basis
+                                    Performing training sessions on different technologies on a daily basis in Bulgarian and English for different technologies
                                 </li>
                             </ul>
                         </div>
@@ -224,7 +221,7 @@
                                             Olympiad in Informatics.
                                         </li>
                                         <li class="list-item">
-                                            For the past year, I have single-handedly maintained Telerik Academy's online judge system
+                                            At my previous job, I have single-handedly maintained Telerik Academy's online judge system
                                             <a href="http://judge.telerikacademy.com">http://judge.telerikacademy.com</a>.
                                         </li>
                                     </ul>
@@ -248,6 +245,28 @@
                                 </li>
                                 <li class="list-item">
                                     Linux/Mac/Windows system administration
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="list-item">
+                        <h2 class="title">.NET</h2>
+                        <div class="expertise">
+                            <ul class="list">
+                                <li class="list-item">
+                                    ASP.NET Core
+                                </li>
+                                <li class="list-item">
+                                    ASP.NET MVC
+                                </li>
+                                <li class="list-item">
+                                    EntityFramework
+                                </li>
+                                <li class="list-item">
+                                    WPF
+                                </li>
+                                <li class="list-item">
+                                    UWP
                                 </li>
                             </ul>
                         </div>
@@ -304,28 +323,6 @@
                         </div>
                     </li>
                     <li class="list-item">
-                        <h2 class="title">.NET</h2>
-                        <div class="expertise">
-                            <ul class="list">
-                                <li class="list-item">
-                                    ASP.NET Core
-                                </li>
-                                <li class="list-item">
-                                    ASP.NET MVC
-                                </li>
-                                <li class="list-item">
-                                    EntityFramework
-                                </li>
-                                <li class="list-item">
-                                    WPF
-                                </li>
-                                <li class="list-item">
-                                    UWP
-                                </li>
-                            </ul>
-                        </div>
-                    </li>
-                    <li class="list-item">
                         <h2 class="title">Python</h2>
                         <div class="expertise">
                             <ul class="list">
@@ -374,6 +371,92 @@
             <div class="content text-center">
                 <h1>Projects</h1>
                 <ul class="list list-horizontal">
+                    <li class="list-item wide">
+                        <div class="info">
+                            <h2 class="position">
+                                <a href="https://softuni.org">SoftUni ORG</a>
+                            </h2>
+                            <p class="project-details">
+                                LMS and learning plaform for SoftUni International. Includes an informational site, blog, LMS and an engine with in-the-browser code execution
+                            </p>
+                        </div>
+                        <div class="technologies">
+                            <ul class="list list-dots text-left">
+                                <li class="list-item">
+                                    I an the architect, DevOps, System administration and Technical lead for this system and am responsible for most of the architecture and tooling 
+                                </li>
+                                <li class="list-item">
+                                    Built on ASP.NET Core 2
+                                </li>
+                                <li class="list-item">
+                                    Microservice Architecture, containerized with Docker images 
+                                </li>
+                                <li class="list-item">
+                                    Front-end in React
+                                </li>
+                                <li class="list-item">
+                                    60%+ code coverage by unit and integration tests
+                                </li>
+                                <li class="list-item">
+                                    Runs on AWS
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
+
+
+                    <li class="list-item wide">
+                            <div class="info">
+                                <h2 class="position">
+                                    <a href="https://judge.telerikacademy.com">Online Judge System</a>
+                                </h2>
+                                <p class="project-details">
+                                    Online judge system for Telerik Academy. Supports 30 different programming languages, including C#, Java, Python, JavaScript
+                                    and C++.
+                                    <br/> How does it work:
+                                    <ol class="list text-left">
+                                        <li class="list-item">
+                                            Admins setup a contest with problems. Each problems has assignment and predefined tests
+                                        </li>
+                                        <li class="list-item">
+                                            Students register for a contest
+                                        </li>
+                                        <li class="list-item">
+                                            Students can access private algorithmic problems
+                                        </li>
+                                        <li class="list-item">
+                                            Students submit their solutions for a problem
+                                        </li>
+                                        <li class="list-item">
+                                            The judge judges students' solutions and grades them, based on the correct tests
+                                        </li>
+                                    </ol </p>
+                            </div>
+    
+                            <div class="technologies">
+                                <ul class="list list-dots text-left">
+                                    <li class="list-item">
+                                        Open source,
+                                        <a href="https://github.com/Minkov/site">Site</a>,
+                                        <a href="https://github.com/Minkov/judge">Judge</a>,
+                                        <a href="https://github.com/Minkov/dmoj-env">Development environment setup</a>
+                                    </li>
+                                    <li class="list-item">
+                                        Built with Django on Python
+                                    </li>
+                                    <li class="list-item">
+                                        Uses MariaDB
+                                    </li>
+                                    <li class="list-item">
+                                        Development environment setup is done with Vagrant. Setup is done with "vagrant up" and 15 minutes later you have a working
+                                        environment, running on Ubuntu 16.04.
+                                    </li>
+                                    <li class="list-item">
+                                        Has a Docker automation, but it is still in progress.
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
                     <li class="list-item">
                         <div class="info">
                             <h2 class="position">
@@ -487,59 +570,6 @@
                                 </li>
                                 <li class="list-item">
                                     Front-end built on AngularJS
-                                </li>
-                            </ul>
-                        </div>
-                    </li>
-
-                    <li class="list-item wide">
-                        <div class="info">
-                            <h2 class="position">
-                                <a href="https://judge.telerikacademy.com">Online Judge System</a>
-                            </h2>
-                            <p class="project-details">
-                                Online judge system for Telerik Academy. Supports 30 different programming languages, including C#, Java, Python, JavaScript
-                                and C++.
-                                <br/> How does it work:
-                                <ol class="list text-left">
-                                    <li class="list-item">
-                                        Admins setup a contest with problems. Each problems has assignment and predefined tests
-                                    </li>
-                                    <li class="list-item">
-                                        Students register for a contest
-                                    </li>
-                                    <li class="list-item">
-                                        Students can access private algorithmic problems
-                                    </li>
-                                    <li class="list-item">
-                                        Students submit their solutions for a problem
-                                    </li>
-                                    <li class="list-item">
-                                        The judge judges students' solutions and grades them, based on the correct tests
-                                    </li>
-                                </ol </p>
-                        </div>
-
-                        <div class="technologies">
-                            <ul class="list list-dots text-left">
-                                <li class="list-item">
-                                    Open source,
-                                    <a href="https://github.com/Minkov/site">Site</a>,
-                                    <a href="https://github.com/Minkov/judge">Judge</a>,
-                                    <a href="https://github.com/Minkov/dmoj-env">Development environment setup</a>
-                                </li>
-                                <li class="list-item">
-                                    Built with Django on Python
-                                </li>
-                                <li class="list-item">
-                                    Uses MariaDB
-                                </li>
-                                <li class="list-item">
-                                    Development environment setup is done with Vagrant. Setup is done with "vagrant up" and 15 minutes later you have a working
-                                    environment, running on Ubuntu 16.04.
-                                </li>
-                                <li class="list-item">
-                                    Has a Docker automation, but it is still in progress.
                                 </li>
                             </ul>
                         </div>
