--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 
     <script src="/js/scroll-to.js"></script>
 
-    <title>Doncho Minkov - Training Manager @ Telerik Academy</title>
+    <title>Doncho Minkov - Team lead, System Architect and Technical Trainer @ SoftUni</title>
 </head>
 
 <body>
@@ -31,6 +31,9 @@
                 </li>
                 <li class="list-item">
                     <a class="btn-scroll" href="#tech">Tech</a>
+                </li>
+                <li class="list-item">
+                    <a class="btn-scroll" href="#projects">Projects</a>
                 </li>
                 <li class="list-item">
                     <a class="btn-scroll" href="#education">Education</a>
